modules/015-admission-policy-engine/charts/constraint-templates/templates/operation/container-duplicates.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8containerduplicates
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: operation-policy
  annotations:
    metadata.gatekeeper.sh/title: "Check container duplicate parameters."
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Check container names and env variables for duplicates.
spec:
  crd:
    spec:
      names:
        kind: D8ContainerDuplicates
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
            rego: |
              package d8.operation_policies

              import data.lib.common.pod_spec
              import data.lib.common.review_kind

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                container := input_containers_envs[_]
                cdata := container.envs[_]
                count(cdata) > 1
                msg := sprintf("Container <%v> in %v <%v> has duplicated env variable names: '%v'", [container.name, review_kind, input.review.object.metadata.name, cdata[0]])
              }

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                cdata := input_containers[_]
                count(cdata) > 1
                msg := sprintf("%v <%v> has duplicated container names: '%v'", [review_kind, input.review.object.metadata.name, cdata[0]])
              }

              container_names := {name: list |
                some i
                containers := object.get(pod_spec, "containers", [])
                name := containers[i].name
                list := [obj |
                  some j
                  containers[j].name == name
                  obj := name
                ]
              }

              init_container_names := {name: list |
                some i
                init_containers := object.get(pod_spec, "initContainers", [])
                name := init_containers[i].name
                list := [obj |
                  some j
                  init_containers[j].name == name
                  obj := name
                ]
              }

              container_envs := [container |
                some i
                containers := object.get(pod_spec, "containers", [])
                container_name := containers[i].name
                envs := {name: list |
                  name := containers[i].env[_].name
                  list := [obj |
                    containers[i].env[_].name == name
                    obj := name
                  ]
                }
                container := {"name": container_name, "envs": envs}
              ]

              init_container_envs := [container |
                some i
                init_containers := object.get(pod_spec, "initContainers", [])
                container_name := init_containers[i].name
                envs := {name: list |
                  name := init_containers[i].env[_].name
                  list := [obj |
                    init_containers[i].env[_].name == name
                    obj := name
                  ]
                }
                container := {"name": container_name, "envs": envs}
              ]

              input_containers contains c if {
                c := container_names[_]
              }

              input_containers contains c if {
                c := init_container_names[_]
              }

              input_containers_envs := array.concat(container_envs, init_container_envs)
