modules/015-admission-policy-engine/charts/constraint-templates/tests/container-duplicates/allowed_envs_same_name_diff_containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  containers:
    - name: nginx1
      image: nginx
      env:
        - name: key1
          value: val1
    - name: nginx2
      image: nginx
      env:
        - name: key1
          value: val2
