modules/015-admission-policy-engine/charts/constraint-templates/tests/container-duplicates/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8ContainerDuplicates
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
