modules/015-admission-policy-engine/charts/constraint-templates/tests/container-duplicates/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx
    - name: nginx
      image: bar
