modules/015-admission-policy-engine/charts/constraint-templates/tests/container-duplicates/disallowed_envs_same_name_same_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx
      env:
        - name: key1
          value: val1
        - name: key1
          value: val2
