modules/015-admission-policy-engine/charts/constraint-templates/tests/container-duplicates/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8containerduplicates
tests:
  - name: d8containerduplicates
    template: ../../templates/operation/container-duplicates.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        object: allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: disallowed.yaml
        assertions:
          - violations: yes
            message: "Pod <disallowed> has duplicated container names: 'nginx'"
      - name: example-disallowed-envs
        object: disallowed_envs.yaml
        assertions:
          - violations: yes
            message: "Pod <disallowed> has duplicated env variable names: 'key1'"
